crates/formatter/tests/snapshots/snapshots__synapse__main__delta__84__01_auth_links_stats.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- Force the statistics for these tables to show that the number of distinct
-- chain IDs are proportional to the total rows, as postgres has trouble
-- figuring that out by itself.
alter table event_auth_chain_links
	alter origin_chain_id set (n_distinct = -0.5);
alter table event_auth_chain_links
	alter target_chain_id set (n_distinct = -0.5);

-- We should have done an `ANALYZE event_auth_chain_links` here, but we forgot.
