crates/formatter/tests/snapshots/snapshots__synapse__main__delta__84__03_auth_links_analyze.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- We need to do an ANALYZE after `01_auth_links_stats.sql.postgres`, where we
-- fiddled with the stats.
analyze event_auth_chain_links;
